# rgba

./: .gitignore  Cargo.toml  README.md
src/: arit.rs  bios.rs  bus.rs  cpu_gb.rs  cpu_gba.rs  dma.rs  gba.rs  keypad.rs  lib.rs  main.rs  ppu.rs  rom.rs  timer.rs  utils.rs
src/cpu/: arm.rs  cpu_gba.rs  mod.rs  psr.rs  register.rs  thumb.rs
src/ppu/: bg.rs  mod.rs  oam.rs  palette.rs  ppu.rs  tile.rs
